--- a/style.css
+++ b/style.css
@@ -1,42 +1,82 @@
+@font-face {
+  font-family: RobotoMonoLight;
+  src: url("./fonts/RobotoMono-Light.ttf");
+}
+
+@font-face {
+  font-family: RobotoMonoRegular;
+  src: url("./fonts/RobotoMono-Regular.ttf");
+}
+
 body {
   background-color: #222222;
   color: #eeeeee;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: RobotoMonoRegular;
+  letter-spacing: 0.03rem;
 }
 
 .header {
   display: flex;
-  font-size: 1.25rem;
   justify-content: center;
+}
+
+h1 {
+  font-family: RobotoMonoLight;
+  font-size: 2rem;
+  font-weight: normal;
 }
 
 .content {
   display: block;
-  font-family: "Courier New", Courier, monospace;
   font-size: 0.7rem;
 }
 
 .task {
+  display: flex;
   margin-left: 24px;
+  justify-content: space-between;
+  margin-top: 4px;
+}
+
+h2 {
+  font-size: 1rem;
+  font-weight: normal;
+}
+
+.done-btn {
+  background-color: #222222;
+  border: dashed 0.15rem #eeeeee;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+  margin-right: 24px;
+  margin-top: 14px;
+  transition: 0.1s;
+}
+
+.done-btn:hover {
+  background-color: #eeeeee;
 }
 
 .task-input {
   display: flex;
   justify-content: center;
-  margin-top: 36px;
+  margin-top: 32px;
+  margin-bottom: 48px;
 }
 
 input {
   background: #222222;
   color: #eeeeee;
   display: block;
-  padding: 10px;
+  padding: 8px;
   border: dashed 0.15rem #eeeeee;
 }
 
 ::placeholder {
   color: #cccccc;
-  font-family: "Courier New", Courier, monospace;
+  /* font-family: RobotoMono; */
+  letter-spacing: 0.07rem;
   font-size: 0.8rem;
+  text-align: center;
 }
