--- a/style.css
+++ b/style.css
@@ -27,20 +27,27 @@ h1 {
 }
 
 .content {
-  display: block;
-  font-size: 0.7rem;
+  margin: 0px 20px;
 }
 
 .task {
   display: flex;
-  margin-left: 24px;
   justify-content: space-between;
-  margin-top: 4px;
+  align-items: center;
+}
+
+.task-title {
+  display: flex;
 }
 
 h2 {
   font-size: 1rem;
   font-weight: normal;
+  line-height: 1.75rem;
+}
+
+.task-id {
+  margin-right: 8px;
 }
 
 .done-btn {
@@ -49,8 +56,7 @@ h2 {
   cursor: pointer;
   width: 20px;
   height: 20px;
-  margin-right: 24px;
-  margin-top: 14px;
+  margin-left: 16px;
   transition: 0.1s;
 }
 
@@ -75,7 +81,6 @@ input {
 
 ::placeholder {
   color: #cccccc;
-  /* font-family: RobotoMono; */
   letter-spacing: 0.07rem;
   font-size: 0.8rem;
   text-align: center;
